Bug 411537 - Nanosecond timestamps support
Summary: Nanosecond timestamps support
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.61.0
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-02 19:07 UTC by GerbilSoft
Modified: 2020-06-21 11:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.72
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GerbilSoft 2019-09-02 19:07:45 UTC
Currently, copying a file to another directory copies the seconds portion of the mtime, but not the nanoseconds.

STEPS TO REPRODUCE
1. Check the mtime of a file.
2. Copy the file to another directory.

Example file, which will be coped to dest/:

$ ls -l --time-style=full-iso src/
-rw-r--r-- 1 david david 0 2019-09-02 15:05:11.016028432 -0400 file

OBSERVED RESULT

$ ls -l --time-style=full-iso dest/
-rw-r--r-- 1 david david 0 2019-09-02 15:05:11.000000000 -0400 file

EXPECTED RESULT

$ ls -l --time-style=full-iso dest/
-rw-r--r-- 1 david david 0 2019-09-02 15:05:11.016028432 -0400 file

SOFTWARE/OS VERSIONS

KDE Frameworks 5.61.0
Dolphin 19.08.0
Qt 5.12.3
Comment 1 David Faure 2020-06-21 11:50:50 UTC
Git commit e8780b64b62bb3da5ed86911eeeb36155c4cbe52 by David Faure, on behalf of Méven Car.
Committed on 21/06/2020 at 11:50.
Pushed by dfaure into branch 'master'.

File ioslave: set nano sec timestamp when copying
FIXED-IN: 5.72

M  +9    -1    src/ioslaves/file/file_unix.cpp

https://invent.kde.org/frameworks/kio/commit/e8780b64b62bb3da5ed86911eeeb36155c4cbe52