File ioslave: set nano sec timestamp when copying

BUG: 411537
FIXED-IN: 5.72